--- a/index.css
+++ b/index.css
@@ -1,4 +1,7 @@
+/* header container */
+
 * {
+    box-sizing: border-box;
     padding: 0;
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
@@ -12,15 +15,19 @@
     font-size: 2em;
 }
 
+/* search for city container */
 .card {
-    width: 35%;
-
+    width: 47%;
+    float: left;
+    padding: 0;
+    margin: 5px;
 }
 
 .card-body {
-    padding: 0;
+    height: 80vh;
+
 }
 
-input[type="submit"] {
-    font-family: fontAwesome;
+.result-card {
+    height: 40vh;
 }
