--- a/index.css
+++ b/index.css
@@ -5,6 +5,7 @@
     padding: 0;
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
+    width: 100%;
 
 }
 
@@ -19,15 +20,20 @@
 .card {
     width: 47%;
     float: left;
-    padding: 0;
-    margin: 5px;
+    padding: 50px;
+    margin: 20px;
 }
 
-.card-body {
+.dayForecast-card {
+    text-align: center;
+}
+
+/* .card-body {
     height: 80vh;
 
-}
+} */
 
-.result-card {
+/* .result-card {
     height: 40vh;
-}
+    float: left;
+} */
